Neglected to handle saving after introducing mixed types